# Camera_Capture

./: CMakeLists.txt  README.md  cam_cfg_l.txt  cam_cfg_r.txt  cam_l.bat  cam_r.bat  camera_configfile.txt  spinnaker_nodemap_example.txt
include/: ftdi_functions.h  image_capture.h
src/: cam_capture_main_v1.cpp
